Array copy may cause infinite cycle of deoptimization/compilation

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b52

        LibraryCallKit::inline_arraycopy() checks if we've seen too many traps at current method/bytecode but in case of tightly couples allocation we record the trap at the method/bci of the allocation.

              Assignee:
              Roland Westrelin
              Reporter:
              Roland Westrelin
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: