8072016: Array copy may cause infinite cycle of deoptimization/compilation

Infinite deoptimization/recompilation cycles in case of arraycopy with tightly coupled allocation

Reviewed-by: kvn, vlivanov